--- a/94-126TImappings.json
+++ b/94-126TImappings.json
@@ -582,7 +582,7 @@
                         "fieldMappings": [
                             {
                                 "identifier": "Url",
-                                "columnName": "URLCustomEntity"
+                                "columnName": "Name"
                             }
                         ]
                     }
